[project]
name = "inkcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.136.3",
    "feedgen>=1.0.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "kokoro-onnx>=0.5.0",
    "lxml>=6.1.1",
    "openai>=2.41.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
